[package]
name = "renderer"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
description = "markdown renderer for Note Mark frontend"
repository = "https://github.com/enchant97/note-mark"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = { version = "0.13", default-features = false, features = [ "html" ] }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde_yaml2 = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }
serde-wasm-bindgen = "0.4"
url = { version = "2.5", features = ["serde"] }

[profile.release]
lto = true
opt-level = 's'
